apps/shop/cart/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-cart-prod
spec:
  host: shop-cart.shop-cart.svc.cluster.local
  subsets:
  - name: shop-cart-prod
    labels:
      app: shop-cart
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-cart-prod-p1a
    labels:
      app: shop-cart
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
